[package]
name = "gorgon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.7"
imageproc = "0.23.0"
image-compare = "0.3.1"
num = "0.4.1"
chrono = "0.4.31"
serde = {version="1.0.125",features = ["derive"] }
serde_json = "1.0.64"
anyhow = "1.0.75"