[package]
name = "vorgon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "video_frames"
path = "src/bin/video_frames.rs"

[[bin]]
name = "streamit"
path = "src/bin/streamit.rs"

[dependencies]
image = "0.24.7"
imageproc = "0.23.0"
image-compare = "0.3.1"
ffmpeg-next = "6.1.0"
regex = "1.9.6"
num = "0.4.1"
chrono = "0.4.31"
anyhow = "1.0.75"
